--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -144,26 +144,27 @@
           </div>
 
           <div class="preview_video" id="preview_video_div">
-            <video id="preview_video" width="300px" onclick="play_video()"></video>
+            <video class="preview_video_player" id="preview_video" width="300px" onclick="play_video()"></video>
             <div class="preview_video_controls">
-              <img id="preview_play_pause_video" class="icon" width="20" height="20" style="position: absolute; margin: 2px 4px;" src="static/img/player/play.svg" onclick="play_video()"/>
+              <img id="preview_play_pause_video" class="icon" width="20" height="20" style="position: absolute; margin: 2px 6px;" src="static/img/player/play.svg" onclick="play_video()"/>
               <input type="range" id="preview_video_volume" style="width: 65px; position: absolute; right: 20px; bottom: 8px" name="" min="0" max="100" value="50" step="1" oninput="set_volume_video(this.value)" onchange="set_volume_video(this.value)">
               <input type="range" id="preview_video_input_duration" style="position: absolute; left: 30px; right: 95px; bottom: 8px" name="" min="0" max="100" value="0" step="1" onchange="set_duration_video(this.value)" onmouseover="video_duration_hover = true" onmouseout="video_duration_hover = false" onmousemove="showTooltip_video_duration(event)">
-              <img id="preview_fullscreen_video" class="icon" width="20" height="20" style="position: absolute; margin: 2px 4px; right: 0px" src="static/img/player/fullscreen.svg" onclick="full_screen()"/>
+              <img id="preview_fullscreen_video" class="icon" width="20" height="20" style="position: absolute; margin: 2px 4px; right: 2px" src="static/img/player/fullscreen.svg" onclick="full_screen()"/>
               <div class="preview_video_duration_info" id="preview_video_duration_info">
                 <p id="preview_video_duration_info_p"></p>
               </div>
             </div>
           </div>
 
-          <div class="preview_audio block_select" id="preview_audio_div" style="height: 50px; cursor: default;">
+          <div class="preview_audio block_select" id="preview_audio_div" style="height: 100px; cursor: default;">
+            <div style="height: 50px;"></div>
             <audio id="preview_audio" style="margin: 5px 0px; display: none" width="300px" controls></audio>
             <img id="preview_play_pause_audio" class="icon" width="40" height="40" style="position: absolute; margin: 6px 4px;" src="static/img/player/play.svg" onclick="play_audio()"/>
             <img class="icon" width="20" height="20" style="position: absolute; left: 45px;" src="static/img/player/back.svg" onclick="next_audio(true)"/>
             <img class="icon" style="transform: rotate(-180deg); position: absolute; right: 4px;" width="20" height="20" src="static/img/player/back.svg" onclick="next_audio()"/>
             <input id="preview_audio_name" class="preview_audio_name" style="left: 80px; right: 40px; margin-top: 4px;" type=text placeholder="file name" onkeypress="" readonly>
-            <input type="range" id="preview_audio_volume" style="width: 70px; position: absolute; right: -4px; bottom: 5px" name="cowbell" min="0" max="100" value="50" step="1" oninput="set_volume_audio(this.value)" onchange="set_volume_audio(this.value)">
-            <input type="range" id="preview_audio_input_duration" style="position: absolute; left: 45px; right: 75px; bottom: 5px" name="cowbell" min="0" max="100" value="0" step="1" onchange="set_duration_audio(this.value)" onmouseover="audio_duration_hover = true" onmouseout="audio_duration_hover = false">
+            <input type="range" id="preview_audio_volume" style="width: 70px; position: absolute; right: -4px; bottom: 8px" name="cowbell" min="0" max="100" value="50" step="1" oninput="set_volume_audio(this.value)" onchange="set_volume_audio(this.value)">
+            <input type="range" id="preview_audio_input_duration" style="position: absolute; left: 45px; right: 75px; bottom: 8px" name="cowbell" min="0" max="100" value="0" step="1" onchange="set_duration_audio(this.value)" onmouseover="audio_duration_hover = true" onmouseout="audio_duration_hover = false">
           </div>
 
           <!-- редактирование (text) -->
