--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -126,6 +126,10 @@
 
         <div id="file_activity_view" class="activity_container">
 
+          <div class="preview_text" id="preview_text_div">
+            <textarea id="preview_text_textarea" class="preview_text_textarea input_style scroll_style" readonly></textarea>
+          </div>
+
           <div class="preview_image" id="preview_image_div">
             <img id="preview_image" class="preview_image_image" width="300px" src="" onclick="image_fullscreen()"/>
 
