--- a/app/static/css/apps.1.css
+++ b/app/static/css/apps.1.css
@@ -1,10 +1,10 @@
-.terminal_button_style {
+.apps_button_style {
   position: absolute;
   width: 200px;
   height: 45px;
   border-top: 1px solid var(--main-border-color);
   border-bottom: 1px solid var(--main-border-color);
-  /* background-color: var(--terminal-list-bg); */
+  /* background-color: var(--apps-list-bg); */
   border-radius: 8px 8px 0px 0px;
   background-color: var(--hover-color);
 
@@ -12,38 +12,38 @@
   left: 0px;
 }
 
-.terminal_button_style:hover {
+.apps_button_style:hover {
   background-color: var(--hover-color);
 }
 
-.terminal_button_style_online {
+.apps_button_style_online {
   font-size: 0.9em;
   color: #959DA5
 }
 
-.terminal_list_div_scroll {
+.apps_list_div_scroll {
   position: absolute;
   top: 297px;
   bottom: 35px;
   width: var(--width-left-bar);
   /* background-color: var(--hover-color); */
-  /* background-color: var(--terminal-list-bg); */
+  /* background-color: var(--apps-list-bg); */
   overflow-y: scroll;
   overflow-x: hidden;
   direction: rtl;
 }
 
-.terminal_list_div {
+.apps_list_div {
   width: 100%;
   /* height: 100%; */
   direction: ltr;
 }
 
-.terminal_list_div ul {
+.apps_list_div ul {
   margin: 0px;
 }
 
-.terminal_list_element {
+.apps_list_element {
   width: var(--width-left-bar);
   height: 40px;
   padding: 0px;
@@ -51,11 +51,11 @@
   /* margin-top: -14px; */
 }
 
-.terminal_list_element:hover {
+.apps_list_element:hover {
   background-color: var(--hover-color);
 }
 
-.terminal_list_delete {
+.apps_list_delete {
   display: none;
   position: absolute;
   left: 10px;
@@ -63,36 +63,65 @@
   cursor: pointer;
 }
 
-.terminal_list_icon {
+.apps_list_icon {
   display: block;
   position: absolute;
   left: 10px;
   margin: 10px 0px;
 }
 
-.terminal_list_dot {
+.apps_list_dot {
   position: absolute;
   font-size: 2em;
   right: 10px;
   margin-top: -3px;
 }
 
-.terminal_list_name {
+.apps_list_name {
   position: absolute;
   left: 40px;
   margin: 15px 0px;
 }
 
-.terminal_list_type {
+.apps_list_type {
   position: absolute;
   left: 40px;
   margin: 0px 0px;
 }
 
-.terminal_list_element:hover .terminal_list_delete {
+.apps_list_element:hover .apps_list_delete {
   display: block;
 }
 
-.terminal_list_element:hover .terminal_list_icon {
+.apps_list_element:hover .apps_list_icon {
   display: none;
+}
+
+/*----------------------------------------------------------------------------*/
+
+.apps_buttons_container {
+  position: absolute;
+  left: 0px;
+  top: 36px;
+
+  width: 200px;
+  bottom: 0px;
+
+  border-right: 1px solid var(--main-border-color);
+}
+
+.app_button_selected {
+  margin-top: 5px;
+  margin-left: 5%;
+  width: 90%;
+  background-color: var(--hover-color);
+  border: 1px solid var(--bg-color);
+}
+
+.app_button {
+  margin-top: 5px;
+  margin-left: 5%;
+  width: 90%;
+  background-color: var(--bg-color);
+  border: 1px solid var(--bg-color);
 }
