--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -371,6 +371,8 @@
         <ul id="apps_buttons"></ul>
       </div>
 
+      <div id="apps_main_div" class="apps_main_div"></div>
+
       <div class="round_button dialog_button block_select" style="right: 10px; bottom: 10px; width: 100px;">
         <p style="margin: 5px 28px">create</p>
       </div>
