закрытие диалогов по нажатию на фон

--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -354,7 +354,7 @@
       <img id="path_select_button_triangle" class="icon_topBar" style="position:absolute; right: 10px; top: 10px" width="10" height="10" src="static/img/triangle.svg">
     </div>
 
-    <div id="dialog_bg" class="dialog_backgound"></div>
+    <div id="dialog_bg" class="dialog_backgound" onclick="close_dialogs()"></div>
 
     <!--диалоговые окна-->
 
