подсчёт количества запущенных приложений

--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -64,7 +64,7 @@
       <div class="apps_button_style block_select">
         <img class="icon" style="margin: 6px 6px" width="30" height="30" src="static/img/apps.svg">
         <p style="margin: -40px 44px">apps</p>
-        <p style="margin: 36px 44px;" class="apps_button_style_online">0 elements</p>
+        <p id="apps_count" style="margin: 36px 44px;" class="apps_button_style_online">0 elements</p>
         <img class="icon" style="position:absolute; right: 15px; top: 15px; cursor: pointer" width="15" height="15" src="static/img/add.svg" onclick="create_apps_dialog()">
       </div>
 
