получение и чтение файлов расширений

--- a/app/static/css/apps.1.css
+++ b/app/static/css/apps.1.css
@@ -152,3 +152,18 @@
   border-radius: 8px;
   border: 1px solid var(--main-border-color);
 }
+
+.main_app {
+  position: absolute;
+  top: 36px;
+  left: 0px;
+  right: 0px;
+  bottom: 0px;
+  border-radius: 0 0 8px 8px;
+}
+
+.main_app_frame {
+  border: none;
+}
+
+/*----------------------------------------------------------------------------*/
