--- a/app/static/css/apps.1.css
+++ b/app/static/css/apps.1.css
@@ -164,6 +164,7 @@
 
 .main_app_frame {
   border: none;
+  border-radius: 0 0 7px 7px;
 }
 
 /*----------------------------------------------------------------------------*/
