приложения начали подавать признаки жизни

--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -308,12 +308,12 @@
           <h2>Terminal</h2>
         </div>
         <hr class="main_page_hr">
-        <p style="font-weight: bold; font-size: 16; margin: 10px;">status: connected</p>
+        <p id="terminal_status" style="font-weight: bold; font-size: 16; margin: 10px;">status: connected</p>
       </div>
       <br>
-      <div class="border border_size" style="background-color: #000;">
-        <div style="width: 98.5%; height: 98.5%; margin: 5px;" id="terminal_div"></div>
-      </div>
+      <!-- <div class="border border_size" style="background-color: #000; height: 400px;">
+      </div> -->
+      <div id="terminal_div">
     </div>
 
     <!--alert-->
