распределение сокетов по пользовательским приложениям
 - распределение сокетов по пользовательским приложениям
 - создание приложений
 - удаление приложений

--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -313,7 +313,7 @@
       <br>
       <!-- <div class="border border_size" style="background-color: #000; height: 400px;">
       </div> -->
-      <div id="terminal_div">
+      <div id="terminal_div"></div>
     </div>
 
     <!--alert-->
