--- a/app/static/css/apps.1.css
+++ b/app/static/css/apps.1.css
@@ -43,6 +43,14 @@
   margin: 0px;
 }
 
+.apps_empty_message {
+
+}
+
+.apps_empty_message p {
+  margin: 5px 15px;
+}
+
 .apps_list_element {
   width: var(--width-left-bar);
   height: 40px;
