--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -61,16 +61,22 @@
       </label>
 
       <!--терминал-->
-      <div class="apps_button_style block_select">
-        <img class="icon" style="margin: 6px 6px" width="30" height="30" src="static/img/apps.svg">
-        <p style="margin: -40px 44px">apps</p>
-        <p id="apps_count" style="margin: 36px 44px;" class="apps_button_style_online">0 elements</p>
-        <img class="icon" style="position:absolute; right: 15px; top: 15px; cursor: pointer" width="15" height="15" src="static/img/add.svg" onclick="create_apps_dialog()">
-      </div>
+      <div id="apps_list_main" style="display: none">
+        <div class="apps_button_style block_select">
+          <img class="icon" style="margin: 6px 6px" width="30" height="30" src="static/img/apps.svg">
+          <p style="margin: -40px 44px">apps</p>
+          <p id="apps_count" style="margin: 36px 44px;" class="apps_button_style_online">0 elements</p>
+          <img class="icon" style="position:absolute; right: 40px; top: 15px; cursor: pointer" width="15" height="15" src="static/img/admin/refresh.svg" onclick="get_my_apps()">
+          <img class="icon" style="position:absolute; right: 15px; top: 15px; cursor: pointer" width="15" height="15" src="static/img/add.svg" onclick="create_apps_dialog()">
+        </div>
 
-      <div id="apps_list_div" class="apps_list_div_scroll scroll_style">
-        <div class="apps_list_div">
-          <ul id="apps_list"></ul>
+        <div id="apps_list_div" class="apps_list_div_scroll scroll_style">
+          <div class="apps_list_div">
+            <div id="apps_empty_message" class="apps_empty_message">
+              <p>Application list is empty</p>
+            </div>
+            <ul id="apps_list"></ul>
+          </div>
         </div>
       </div>
 
@@ -389,7 +395,7 @@
 
       <div id="apps_main_div" class="apps_main_div"></div>
 
-      <div class="round_button dialog_button block_select" style="right: 10px; bottom: 10px; width: 100px;">
+      <div class="round_button dialog_button block_select" style="right: 10px; bottom: 10px; width: 100px;" onclick="append_app()">
         <p style="margin: 5px 28px">create</p>
       </div>
     </div>
