--- a/extensions/bash/app.css
+++ b/extensions/bash/app.css
@@ -6,3 +6,13 @@
   right: 0px;
   background-color: #000;
 }
+
+.xterm-viewport::-webkit-scrollbar {
+  background-color: #000;
+  width: 5px;
+}
+
+.xterm-viewport::-webkit-scrollbar-thumb {
+  background: #2F363D;
+  border-radius: 2px;
+}
