--- a/app/static/css/login.1.css
+++ b/app/static/css/login.1.css
@@ -30,18 +30,13 @@
 
   .login_warning {
     position: absolute;
-
-    /*top: 121px;*/
     top: 50px;
     right: 0px;
-
-    height: 30px;
+    height: 35px;
     width: 400px;
-
     background-color: var(--main-red-color);
     border-top: 1px solid var(--main-border-color);
-    /* border-bottom: 1px solid var(--main-border-color); */
-
+    border-radius: 8px 8px 0 0;
   }
 
   .login_container {
@@ -106,18 +101,13 @@
 
   .login_warning {
     position: absolute;
-
-    /*top: 121px;*/
     top: 50px;
     right: 0px;
-
-    height: 30px;
+    height: 35px;
     width: 100%;
-
     background-color: var(--main-red-color);
     border-top: 1px solid var(--main-border-color);
-    /* border-bottom: 1px solid var(--main-border-color); */
-
+    border-radius: 8px 8px 0 0;
   }
 
   .login_container {
