--- a/app/templates/m-main.html
+++ b/app/templates/m-main.html
@@ -37,14 +37,7 @@
       </div>
 
       <div class="add_button_div">
-        <img id="" class="icon_topBar path_buttons block_select button_margin" style="position: absolute; right: 8px; top: 4px" width="35" height="35" src="static/img/add.svg" onclick="open_file_add()">
-      </div>
-
-      <div class="move_buttons">
-        <img id="go_back" class="icon_topBar path_buttons block_select button_margin" style="position: absolute; right: 135px; top: 3px; transform: rotate(-90deg)" width="35" height="35" src="static/img/arrow up.svg" onclick="go_back_dir_history()">
-        <img id="go_forward" class="icon_topBar path_buttons block_select button_margin" style="position: absolute; right: 95px; top: 3px; transform: rotate(90deg)" width="35" height="35" src="static/img/arrow up.svg" onclick="go_forward_dir_history()">
-        <img id="refresh" class="icon_topBar path_buttons block_select button_margin" style="position: absolute; right: 55px; top: 3px; " width="35" height="35" src="static/img/refresh.svg" onclick="update_dir()">
-        <img id="go_home" class="icon_topBar path_buttons block_select button_margin" style="position: absolute; right: 10px; top: 3px; " width="35" height="35" src="static/img/home.svg" onclick="go_home()">
+        <img id="" class="icon_topBar path_buttons block_select button_margin" style="margin: 7px;" width="35" height="35" src="static/img/add.svg" onclick="open_file_add()">
       </div>
 
     </div>
@@ -119,7 +112,7 @@
         <!--продпросмотр фотографии-->
         <div id="file_activity_view">
           <div class="preview_image" id="preview_image_div">
-            
+
             <div class="preview_image_mobile_move" style="left: 0px" onclick="next_image(true)"></div>
 
             <div class="preview_image_mobile_move" style="right: 0px" onclick="next_image()"></div>
