--- a/app/templates/m-main.html
+++ b/app/templates/m-main.html
@@ -97,14 +97,14 @@
 
         <!--кнопка скачивания-->
         <a id="file_download_button" href="" download="test">
-          <div class="file_download_button block_select button_margin">
+          <div class="round_button file_download_button block_select button_margin">
             <img class="icon" width="20" height="20" src="static/img/download.svg">
             <p>download</p>
           </div>
         </a>
 
         <!--кнопка удаления файла-->
-        <div id="file_delete_button" class="file_delete_button block_select button_margin">
+        <div id="file_delete_button" class="round_button file_delete_button block_select button_margin">
           <img class="icon" width="20" height="20" src="static/img/trash.svg">
           <p>delete</p>
         </div>
