--- a/app/static/css/main.1.css
+++ b/app/static/css/main.1.css
@@ -218,10 +218,17 @@ body {
   opacity: .5;
 }
 
-.button_margin p {
-  margin: -28px 40px;
+@media screen and (min-width: 768px) {
+  .button_margin p {
+    margin: -28px 40px;
+  }
 }
 
+@media screen and (max-width: 768px) {
+  .button_margin p {
+    margin: -27px 40px;
+  }
+}
 .button_margin img {
   margin: 7px 10px;
 }
